# mergeos

./: .gitignore  BOUNTY-POLICY.md  BOUNTY_12_IMPLEMENTATION.md  CONTRIBUTING.md  PAYPAL-README.md  PAYPAL_SANDBOX_IMPLEMENTATION.md  QA-VERIFICATION.md  README-INDEX.md  README.md  SUPPORT.md  USDT-GATEWAY-README.md  docker-compose.yml  evidence-credit-receipt.txt  pr121.diff  pr121_utf8.diff  pr29-npm-test.txt  pr32-npm-test.txt  pr36-go-test.txt  pr36-npm-test.txt  supa_solution.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
MergeIDE/: README.md  package-lock.json  package.json
admin/: .env.local.example  index.html  package-lock.json  package.json  server.js  server.test.js  vite.config.js
backend/: .env.example  .env.local.example  .env.production.example  Dockerfile  go.mod  go.sum
contracts/: Anchor.toml  Cargo.toml  README.md  package.json
contracts/programs/mergeos/: Cargo.toml
contracts/programs/mergeos/src/: lib.rs
contracts/solana/programs/mergeos-mrg/: Cargo.toml
contracts/solana/programs/mergeos-mrg/src/: lib.rs
docs/: MRGMINNER.md  social-login-verification.md
frontend/: .env.local.example  .env.production.example  RESPONSIVE_QA_REPORT.md  audit_detailed.py  audit_responsive.py  bounty-verify.test.js  index.html  package-lock.json  package.json  screenshot_audit.py  server.js  server.test.js  vite.config.js
protocol/: README.md  package.json
scan/: .env.production.example  index.html  package-lock.json  package.json  vite.config.js
scripts/: evaluate-project.js  pr-watcher.ps1  (+1 more)
sdk/: README.md  (+1 more)
(+261 files in other folders)
