[package]
name = "mergeos-mrg"
version = "0.1.0"
description = "Anchor program scaffold for MergeOS MRG token, escrow, payout, treasury, and legacy wallet migration."
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "mergeos_mrg"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
